--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -6,3 +6,7 @@
 @import './banners';
 @import './swiper';
 @import './sort';
+@import './not-found';
+@import './delivery';
+@import './modal-window';
+@import './pagination';
