--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,6 +1,7 @@
 .card-wrapper {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -41,7 +42,7 @@
         padding: 8px;
         flex: 1;
         cursor: pointer;
-        font-weight: 600;
+        font-weight: 500;
         font-size: 14px;
         @include noselect();
         &.active {
@@ -57,17 +58,4 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    button {
-        padding: 10px 12px;
-        border: 1px solid var(--accent);
-        border-radius: 20px;
-        color: var(--accent);
-        transition: 0.4s all;
-    }
-
-    button:hover,
-    button:focus {
-        background-color: var(--accent);
-        color: var(--page-bg);
-    }
 }
