--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -6,6 +6,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.7);
+    z-index: 9999;
 }
 
 .cart__wrapper {
@@ -18,7 +19,9 @@
     right: 0;
     top: 0;
     height: 100%;
-    z-index: 9999;
+
+    flex-direction: column;
+    overflow: scroll;
 }
 
 .cart__close {
@@ -32,18 +35,6 @@
 
     &:hover {
         animation: close 3s;
-    }
-}
-
-@keyframes close {
-    0% {
-        transform: rotate(0deg);
-    }
-    50% {
-        transform: rotate(90deg);
-    }
-    50% {
-        transform: rotate(180deg);
     }
 }
 
