--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,29 +4,20 @@
     justify-content: space-between;
 }
 
+.header__row-left {
+    display: flex;
+    gap: 20px;
+}
+
+.header__wrapperBtn {
+    display: flex;
+    gap: 10px;
+}
+
 .header__nav {
     display: flex;
     gap: 10px;
     align-items: center;
-
-    a {
-        border: 1px solid var(--accent);
-        border-radius: 30px;
-        padding: 15px 17px;
-        color: var(--accent);
-        cursor: pointer;
-        transition: 0.3s all;
-    }
-
-    a:hover,
-    a:focus {
-        background-color: var(--accent);
-        color: var(--page-bg);
-    }
-
-    a:active {
-        background-color: #f57b16;
-    }
 
     button {
         padding: 15px 17px;
